--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <!-- Loader -->
-    <div class="loader hidden">
+    <div class="loader">
         <img src="assets/rocket.svg" alt="Rocket Loading Animation">
     </div>
     <!-- Container -->
